Revision history for Perl extension MooseX-Getopt

  * MooseX::Getopt::Basic
    - Disable auto_help config in Getopt::Long, to avoid calling into
    pod2usage when the --help option is used while MooseX::ConfigFromFile
    is in use (the intent is just to fetch the value of the configfile
    option).  (RT#57683) (Karen Etheridge)

0.29 Tue. Jun 15 2010
  * Fix repository metadata. Thanks Robert Bohne for noticing!

0.28 Sat. Jun 05 2010
  * MooseX::Getopt::Strict
    - Make it work with Getopt attribute traits in addition to
      attribute metaclasses.

  * Switch from Module::Install to Dist::Zilla.

0.27 Sun. Feb 10 2010
  * Makefile.PL:
    - Bump dependency to Getopt::Long::Descriptive to 0.081 in an attempt to
      avoid test failures.

  * MooseX::Getopt::Dashes
    - Document that using a cmd_flag argument to attributes can be used to
      override the tr/_/-/ replacement ::Dashes does on attribute names

0.26 Thu. Dec 10 2009
  * MooseX::Getopt::Basic
    - Fix bug with attribute names containing upper case letters.
  * Test suite:
    - Add t/106_no_ignore_case.t for testing the compatibility with
      no_ignore_case

0.25 Thu. Nov 26 2009
  * MooseX::Getopt
   - Split out the warnings and the exception from Getopt so that they can be
     overridden.
   - Split out calling ->die on Getopt::Long::Descriptive::Usage so that
     it can be overridden.
   - Properly split roles as promised in 0.22.

0.24 Fri. Oct  23 2009
  * MooseX::Getopt
    - Fix bug with mixed case attribute names (MAROS)

0.23 Fri. Oct  02 2009
  * MooseX::Getopt
    - Allow the config file to return a code ref which is called to return
      the config file location (Gordon Irving)

0.22 Sat. Sept 05 2009
    - Require GLD 0.077 for RT#49427 as some versions are broken

  * MooseX::Getopt
    - Split into MooseX::Getopt::Basic (without the G::L::Descriptive support)
    and MooseX::Getopt::GLD.

  * Tests
     - Ensure author tests get run when in author mode.
