@@ -10,7 +10,6 @@ use Test::Exception;
     with 'MooseX::Getopt';
 
     has foo => ( isa => 'Int', is => 'ro', documentation => 'A foo' );
-    has help => ( isa => 'Bool', is => 'ro', default => 0, documentation => 'Help');
 
     our $usage = 0;
     before _getopt_full_usage => sub { $usage++; };
@@ -44,9 +43,9 @@ use Test::Exception;
     my $exp = [
          'Unknown option: q
 ',
-         qq{usage: 104_override_usage.t [long options...]
-\t--help     Help
-\t--foo      A foo
+         qq{usage: 104_override_usage.t [-?] [long options...]
+\t-? --usage --help  Prints this usage information.
+\t--foo              A foo
 }
      ];
 
